--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,13 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "cartalyst/sentinel": "2.0.*",
+        "dingo/api": "2.0.0-alpha1",
         "fideloper/proxy": "~3.3",
+        "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "tymon/jwt-auth": "^1.0@dev"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
